# Sift

./: .dockerignore  .env.docker.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.stable.yml  docker-compose.yml  docker-entrypoint.sh  hf_var_env.py  pyproject.toml  req.txt  requirements.docker.txt  requirements.txt  tree.py
.claude/: settings.local.json
Zdocumentation_node/: IMPLEMENTATION_PLAN.md  README_main.md  UI_IMPLEMENTATION_PLAN.md  deployment_idea.md  docker.md  endpoints.txt
app-node/: main.py  settings.py  tasks.py
app_node/: artifacts.py  auth_sessions.py  dev_e2e_probe.py  endpoints.txt  estimation.py  input_resolver.py  instagram_sessions.py  main.py  runtime_capacity.py  settings.py  tasks.py  ui_session_state.py
i-node/: combined_jsonl_cleaner.py  insta_chats_preprocessor.py
i_node/: telegram_agent.py
media-node/: llm_service.py  main.py  processor.py  services.py  utils.py
media_node/: main.py  ocr_cleanup.py  processor.py  services.py  utils.py
music-node/: database.py  download_history.db  main.py  models.py
music_node/: main.py  models.py
tests/: test_app_bootstrap.py  test_app_composition.py  test_artifact_bundling.py  test_instagram_cookie_cache.py  test_instagram_popup_runtime.py  test_instagram_sessions.py  test_media_engine_consistency.py  test_media_package_imports.py  test_music_engine_consistency.py  test_project_hardening.py  test_regression_audit_smoke.py  test_spotify_auth_popup_close.py  test_telegram_agent_import.py  test_web_helpers.py  (+1 more)
(+163 files in other folders)
